k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: skitecode.local
      http:
        paths:
          - path: /user-management(/|$)(.*) # will  redirected with out user-management in path
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 3000
